--- a/styl.css
+++ b/styl.css
@@ -18,7 +18,7 @@ main {
             background-color: black;
             background-position: center;
             background-size: cover;
-            margin-bottom: -80px;
+            margin-bottom: -30px;
            
         }
 }
@@ -41,13 +41,15 @@ main {
             background-position: center;
             background-size: cover;   
         }
+     
+    
 }
 .pasek{
       
     max-width: 1280px;
     height: 104px;
     margin-left: auto;
-    margin-right: auto;
+    margin-right: auto;:
     background-color:rgba(0,0,0,0.3);
     background-image: url(logo/logo1.png);
     background-repeat: no-repeat;
@@ -57,6 +59,13 @@ main {
      transition: all 1s;
     transition-timing: ease-in-out;   
 } 
+.pasek:hover{
+  -ms-transform: rotate  (10deg); 
+  -webkit-transform: rotate  (10deg);  
+  transform: rotate(-0.5deg);      
+}
+
+
 nav {
     height: 30px;
     text-align: right;
@@ -109,6 +118,36 @@ nav a:hover {
 nav a {
          font-size: 15px;
     }
+    
+#pasja{
+    color: red;
+    clear: both;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top:auto;
+    margin-bottom: auto;
+    overflow:hidden;   
+}
+#pasja p{
+    color: white;
+    font-family:calibri;
+    font-size: 10px;
+    text-align: center;
+    font-weight: 5;
+    letter-spacing: 0.5px;
+}
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
 }
 section{
     background-color: black;
@@ -196,7 +235,7 @@ article{
 .techno{
     width: 120px;
     height: 150px;
-    margin-top: 20px;
+    margin-top:25px;
     margin-left: auto;
     margin-right: auto;  
 }
@@ -222,13 +261,13 @@ article{
     color: black;
     font-family:calibri;
     text-align:center;
-    margin-left: auto;
-    margin-right: auto;
+    margin-left: 1%;
+    margin-right: 1%;
     font-weight: 100;
     margin-top: 60px;
     padding-right: 45px;
     border: 2px solid url(logo/Dark.jpg);
-    border-radius: 100px;  
+    border-radius: 410px;  
 }
 h3{
     color: black;
@@ -660,27 +699,27 @@ img#autor{
 #pasja p{
     letter-spacing:1px;
     color: black;
-    font-size: 22px;
+    font-size: 25px;
     text-align: center;
-    font-weight: 500;   
+    font-weight: 350;   
 }
 .info{
     background-image:url(logo/Dark.jpg);
     color: black;
     font-family:calibri;
     text-align:center;
-    margin-left: 20px;
-    margin-right: 20px;
+    margin-left: 160px;
+    margin-right: 160px;
     border: 2px solid url(logo/Dark.jpg);
-    border-radius: 35px;
+    border-radius: 600px;
     padding-bottom: 1px;
-    padding-top: 1px;
+    padding-top: 3px;
     transition-duration: 2s;    
 }
 .info:hover{
   -ms-transform: rotate(10deg); 
   -webkit-transform: rotate(10deg);  
-  transform: rotate(3deg);     
+  transform: rotate(2deg);     
   border:1px solid red;   
 }
 .ob1{
@@ -835,6 +874,11 @@ img#autor{
     margin-top: 20px;
     font-family:calibri;
     letter-spacing: 2px;
+}
+#and:hover{
+  -ms-transform: rotate  (10deg); 
+  -webkit-transform: rotate  (10deg);  
+  transform: rotate(-1deg);      
 }
 article li:hover{
   -ms-transform: rotate(10deg); 
