--- a/styl.css
+++ b/styl.css
@@ -1,5 +1,4 @@
 
-
 body {
     margin: 0;
     padding: 0;
@@ -31,6 +30,29 @@ main {
             background-position: center;
             background-size: cover;
 }     
+    
+ 
+ #pasja{
+    color: red;
+    clear: both;
+    margin-left: -90px;
+    margin-right: -90px;
+    margin-top:auto;
+    margin-bottom: auto;
+    overflow:hidden;   
+}
+#pasja p{
+    color: red;
+    font-family:calibri;
+    font-size: 10px;
+    text-align: center;
+    font-weight: 5;
+    letter-spacing: 0.5px;
+}
+     
+        
+
+    
 }
 @media all and (max-width:100px)
 {
@@ -41,7 +63,9 @@ main {
             background-position: center;
             background-size: cover;   
         }
-     
+
+    
+    
     
 }
 .pasek{
@@ -113,40 +137,15 @@ nav a:hover {
         font-family:calibri;
     }
     nav ul {
-        padding-top:80px;
+        padding-top:60px;
     }
 nav a {
          font-size: 15px;
     }
+     
+
     
-#pasja{
-    color: red;
-    clear: both;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top:auto;
-    margin-bottom: auto;
-    overflow:hidden;   
-}
-#pasja p{
-    color: white;
-    font-family:calibri;
-    font-size: 10px;
-    text-align: center;
-    font-weight: 5;
-    letter-spacing: 0.5px;
-}
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
+
     
 }
 section{
@@ -261,8 +260,8 @@ article{
     color: black;
     font-family:calibri;
     text-align:center;
-    margin-left: 1%;
-    margin-right: 1%;
+    margin-left: 3%;
+    margin-right: 3%;
     font-weight: 100;
     margin-top: 60px;
     padding-right: 45px;
