--- a/styl.css
+++ b/styl.css
@@ -11,8 +11,7 @@ main{
 }
 @media all and (max-width:1930px)
 { 
-header
-        {    
+header{    
             height: 180px;
             background-color: black;
             background-position: center;
