--- a/styl.css
+++ b/styl.css
@@ -22,8 +22,7 @@ header{
 }
 @media all and (max-width:990px)
 {
-header
-        {
+header{
             height: 370px;
             background-color: black;
             background-position: center;
