--- a/styl.css
+++ b/styl.css
@@ -49,8 +49,7 @@ header{
 }
 @media all and (max-width:100px)
 {
-header
-        {
+header{
             height:100px;
             background-color: black;
             background-position: center;
