--- a/styl.css
+++ b/styl.css
@@ -110,8 +110,7 @@ nav a:hover{
         font-size: 17px;
    }
 }
-@media all and (max-width:700px)
-{
+@media all and (max-width:700px){
     nav li{
         display: block;
         background-color: black;
