--- a/styl.css
+++ b/styl.css
@@ -20,8 +20,7 @@ header{
     margin-bottom: -30px;
 }
 }
-@media all and (max-width:990px)
-{
+@media all and (max-width:990px){
 header{
     height: 370px;
     background-color: black;
