--- a/styl.css
+++ b/styl.css
@@ -10,8 +10,7 @@ main{
     margin-right: auto;
 }
 
-@media all and (max-width:1930px)
-{ 
+@media all and (max-width:1930px){ 
 header{    
     height: 180px;
     background-color: black;
