--- a/styl.css
+++ b/styl.css
@@ -164,8 +164,7 @@ footer{
     margin-left: auto;
     margin-right: auto;   
 }
-@media all and (max-width:700px)
-{
+@media all and (max-width:700px){
 section{
         margin-top: 10px;       
 }
